--- a/layouts/partials/home/about.html
+++ b/layouts/partials/home/about.html
@@ -8,7 +8,7 @@
     </p>
 
     <p>
-      Mais do que um espaço de treino, somos um coletivo que preserva a tradição,
+      Mais do que um espaço de treino, somos um grupo que preserva a tradição,
       respeita a ancestralidade e entende a capoeira como linguagem de educação,
       identidade e convivência.
     </p>
@@ -22,7 +22,7 @@
 
 <section class="home-about">
   <div class="container">
-    <h2>Nossa Prática</h2>
+    <h2>Nossa prática</h2>
 
     <p>
       No Kwanza, a capoeira é ensinada e vivida com seriedade.
@@ -39,7 +39,7 @@
 
 <section class="home-about">
   <div class="container">
-    <h2>Vem Aprender</h2>
+    <h2>Agende sua aula</h2>
 
     <p>
       Se você busca um espaço sério, acolhedor e comprometido com a capoeira,
@@ -47,7 +47,7 @@
     </p>
 
     <a href="/vem-aprender/" class="btn-primary">
-      Venha conhecer
+      AGENDAR AULA
     </a>
   </div>
 </section>
