--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -2,7 +2,7 @@
   <div class="nav-container">
 
     <a href="/" class="nav-logo">
-      <img src="/img/logo-kwanza.png" alt="Grupo Kwanza">
+      <img src="/img/logo-kwanza.svg" alt="Grupo Kwanza">
     </a>
 
     <!-- Botão hamburger (mobile) -->
