Correcao do curriculo do Mestre Jaguara

--- a/layouts/partials/equipe/historia-mestre.html
+++ b/layouts/partials/equipe/historia-mestre.html
@@ -35,7 +35,7 @@
           target="_blank"
           rel="noopener"
         >
-          📄 Currículo cultural do Mestre Fundador (PDF)
+          📄 curriculo mestre jaguara (PDF)
         </a>
       </div>
     </div>
