Atualizacao Curriculo Mestre Jaguara

--- a/layouts/partials/equipe/historia-mestre.html
+++ b/layouts/partials/equipe/historia-mestre.html
@@ -35,10 +35,10 @@
           target="_blank"
           rel="noopener"
         >
-          📄 curriculo mestre jaguara (PDF)
+          📄 Currículo cultural do Mestre Fundador (PDF)
         </a>
       </div>
-    </div>
 
+    </div>
   </div>
 </section>
